resources/assets/stylesheets/scss/studip-cke-ui.scss
/* ... */
.ck.ck-button.ck-disabled .ck-button__icon, a.ck.ck-button.ck-disabled .ck-button__icon {
    opacity: unset;
    cursor: default;
    filter: hue-rotate(350deg) saturate(8.7%) brightness(177.3%);
}

.ck .ck-button .ck-disabled .ck-off .ck-button_with-text, .ck .ck-button .ck-disabled .ck-off .ck-button_with-text:hover {
    display: none;
}

.ck.ck-button.ck-source-editing-button .ck.ck-button__label {
    display: none;
}

/* links */
.ck .ck-fake-link-selection,
.ck .ck-link_selected {
    color: var(--white);
}

/* input */
.ck.ck-labeled-field-view.ck-labeled-field-view_focused .ck.ck-label {
    display: none;
}

.ck.ck-link-actions .ck-button.ck-link-actions__preview .ck-button__label {
    min-width: 250px;
    text-align: left;
}

/* math */
.ck.ck-math-form {
    padding: var(--ck-spacing-large);
}
.ck.ck-math-form .ck-button-display-toggle {
    display: none;
}

/* blockquote */
.ck-content blockquote {
    border-left: 3px solid var(--brand-color-lighter);
    padding: 5px 5px 5px 8px;
    margin: 8px 8px 8px 0;
    background-color: rgba(0, 0, 0, 0.05);
    font-style: unset;
}

/* hr */
.ck-content hr {
    margin: 7px 0;
    height: 0;
    background: initial;
    border: 1px solid var(--dark-gray-color-60);
}

/* table */
.ck-content .table {
    margin: 0.9em auto;
}
.ck-content .table {
    margin: 0.9em auto;

    &:not([style]) {
        margin-inline-start: 0;
    }
}

/* StudipWikiLink plugin */
.ck.ck-studip-wiki-link-form {
    max-width: 100%;
    width: 400px;
}

.ck.ck-studip-wiki-link-form fieldset {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: start;
    align-content: stretch;
    padding: var(--ck-spacing-large);
    border: 0;
    margin: 0;

}
.ck.ck-studip-wiki-link-form fieldset > * + * {
    margin-left: var(--ck-spacing-standard);
}

.ck.ck-studip-wiki-link-form fieldset .ck-button {
    flex: 0 0 auto;
    padding-left: var(--ck-spacing-large);
    padding-right: var(--ck-spacing-large);
}

.ck.ck-studip-wiki-link-form fieldset .ck-labeled-field-view {
    flex: 1 1 auto;
}

.ck.ck-studip-wiki-link-form fieldset .ck-labeled-field-view .ck-input {
    width: 100%;
    min-width: 50px;
}

/* table inserter */
.ck .ck-insert-table-dropdown-grid-box.ck-on {
    background: var(--base-color-20);
}

/* tooltips */

.ck.ck-balloon-panel.ck-tooltip {
    background-color: transparent;
}

.ck.ck-balloon-panel.ck-tooltip .ck.ck-tooltip__text,
.ck.ck-tooltip .ck-tooltip__text {
    background-color: var(--dark-gray-color-5);
    border: 1px solid var(--dark-gray-color-30);
    box-shadow: inset 0 1px 0 hsla(0,0%,100%,.5);
    font-size: 14px;
    margin-bottom: 8px;
    padding: 12px;
    text-align: left;
    text-shadow: 0 1px 0 hsla(0,0%,100%,.5);
    white-space: normal;
    z-index: 10000;
    word-wrap: break-word;
    color: var(--black);
    top: 12px;
    position: relative;
}
.ck.ck-tooltip__text::after,
.ck.ck-tooltip.ck-tooltip_s .ck-tooltip__text::after {
    content: "";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
    border: 8px solid rgba(245,246,246,0);
    border-bottom-color: var(--dark-gray-color-5);
    bottom: 100%;
    right: 50%;
    margin-right: -8px;
    top: -16px;
}
.ck.ck-tooltip__text::before,
.ck.ck-tooltip.ck-tooltip_s .ck-tooltip__text::before {
    content: "";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
    border: 9px solid rgba(197,199,202,0);
    border-bottom-color: var(--dark-gray-color-30);
    bottom: 100%;
    right: 50%;
    margin-right: -9px;
    top: -19px;
}

/* search and replace */
.ck.ck-find-and-replace-form fieldset .ck-labeled-field-view .ck-input {
    margin-top: 0 !important; /* overwrite form css in dialogs*/
    max-height: var(--ck-ui-component-min-height);
}

/* editor */
$editor-min-height: 8em;

.ck-source-editing-area {
    min-height: calc($editor-min-height + 2px);
}
.ck-editor__editable_inline {
    cursor: text;
    min-height: $editor-min-height;
}
.ck.ck-editor__editable_inline {
    border: 1px solid var(--ck-color-base-border);
}
.ck.ck-block-toolbar-button {
    background: var(--ck-color-base-background);
    border: 1px solid var(--ck-color-base-border);
    color: var(--base-color);
    z-index: 10000;
}

form.default label:not(.undecorated):not(.ck-voice-label) .ck-source-editing-area textarea {
    margin-top: 0;
}

form.default .ck-source-editing-area textarea {
    max-width: unset;
}

/* forum fixes */
#forum .ck-source-editing-area textarea {
    height: 100%;
}

#forum .ck form {
    display: inherit;
}
.ck.ck-toolbar {
    background-color: var(--dark-gray-color-5);
}

/* tooltip fix for balloon panel */
.ck.ck-balloon-panel.ck-tooltip {
    padding: 0;
}

.ck.ck-dropdown .ck-dropdown__panel.ck-dropdown__panel_sw {
    right: -5px;
    top: calc(100% + 4px);
}

/* toolbar fix for dialogs */
.studip-dialog {
    .ck-editor {
        overflow: hidden;
        .ck-editor__editable_inline {
            height: 200px;
            resize: vertical;
        }
    }
}

form.default textarea:not(.size-l) + .ck-editor {
    .ck-toolbar__grouped-dropdown {
        .ck-toolbar {
            max-width: calc(48em - 2px);
        }
    }
}

/* balloon editor button*/
.ck.ck-block-toolbar-button {
    background-color: var(--dark-gray-color-5);
}

